# hr-ai-backend

./: .env.example  CLAUDE.md  INTERVIEW_INTEGRATION.md  README.md  TESTING_GUIDE.md  ai_interviewer_agent.py  main.py  pyproject.toml  quick_api_test.py  simple_test.py  test_system.py
app/core/: config.py  database.py  s3.py  session_middleware.py
app/models/: __init__.py  interview.py  interview_report.py  resume.py  session.py  vacancy.py
app/repositories/: __init__.py  base_repository.py  interview_reports_repository.py  interview_repository.py  resume_repository.py  session_repository.py  vacancy_repository.py
app/routers/: __init__.py  admin_router.py  analysis_router.py  interview_reports_router.py  interview_router.py  resume_router.py  session_router.py  vacancy_router.py
app/services/: __init__.py  admin_service.py  agent_manager.py  ai_interviewer_service.py  file_service.py  interview_finalization_service.py  interview_reports_service.py  interview_service.py  pdf_report_service.py  resume_service.py  vacancy_parser_service.py  vacancy_service.py
celery_worker/: celery_app.py  database.py  interview_analysis_task.py  process_cleanup_task.py  tasks.py
migrations/: env.py
migrations/versions/: 1a2cda4df181_add_interview_plan_to_resume.py  385d03e3281c_add_interviewstatus_enum_type.py  4723b138a3bb_add_interview_sessions_table.py  4d04e6e32445_update_interviewsession_model_to_use_.py  4e19b8fe4a88_add_session_id_to_resume.py  772538626a9e_revert_json_fields_back_to_json_type.py  7ffa784ab042_add_sample_vacancies.py  86cfa6ee73af_add_pdf_report_url_to_interview_reports.py  96ffcf34e1de_update_interview_sessions_status_column_.py  9c60c15f7846_add_interview_reports_table_with_.py  9d415bf0ff2e_add_dialogue_history_column_only.py  a694f7c9e766_initial.py  a816820baadb_change_json_fields_to_text_for_proper_.py  ae966b3e742e_add_session_table.py  c2d48b31ee30_add_interview_dialogue_and_analysis_.py  c9bcdd2ddeeb_recreate_interview_sessions_with_.py  dba37152ae9a_add_parsing_statuses_to_resumestatus_.py  de11b016b35a_add_ai_agent_process_tracking.py  efeebe53c76c_add_interview_session_resume_.py
rag/: __init__.py  memory.py  registry.py  settings.py  vector_store.py
rag/database/: __init__.py  model.py
rag/llm/: __init__.py  model.py
rag/service/: __init__.py  model.py
templates/: interview_report.html
