[project]
name = "hr-ai-backend"
version = "0.1.0"
description = "HR AI Backend with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "redis>=5.0.0",
    "langchain-openai>=0.3.32",
    "langchain-milvus>=0.2.1",
    "celery>=5.3.0",
    "pdfplumber>=0.10.0",
    "psycopg2-binary>=2.9.0",
    "python-docx>=1.2.0",
    "docx2txt>=0.9",
    "livekit>=1.0.12",
    "livekit-api>=1.0.5",
    "livekit-agents[cartesia,deepgram,openai,silero,resemble,turn-detector]~=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
